Содеинение почти стабильно Добавлено HSV Color Picker Задел разметки под фрагменты

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Client PS/10</string>
+
+    <string name="hex" translatable="false">HEX:</string>
+    <string name="transparency">Transparency</string>
+    <string name="hardness">Hardness</string>
+    <string name="rrggbb" translatable="false">RRGGBB</string>
+
+    <string name="ip_title">IP адрес сервера</string>
+    <string name="port_title">Порт сервера</string>
 </resources>
